# tidyup-tango

./: .coderabbit.yaml  .gitignore  .mergify.yml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  PROJECT.md  README.md  TEAM_AGREEMENTS.md  docker-compose.yml  flake.nix  package-lock.json  package.json  playwright.config.ts
.claude-sessions/: 0028a628-3f75-484d-bcef-03af33c941ee.jsonl  01599b01-749d-4009-adfb-cb63fd7b51c2.jsonl  052e2b27-b814-496a-bc97-1e35a650e85c.jsonl  0560b569-3212-4b1f-8ca0-cd4d1b2e2314.jsonl  056d9878-02ff-4088-b747-5c5a73d50d89.jsonl  08895a23-8976-4c07-870a-e9d525afe8ef.jsonl  0cf03c6b-47ba-4da0-a60a-2cc7b153a574.jsonl  1819d250-55fc-4e47-aeca-1b6932cdeacd.jsonl  1c0667af-b4e7-49a4-bf17-8afeb708b3eb.jsonl  1c697fee-cf84-4723-88d7-e875bdd7888a.jsonl  20481ead-23a9-4902-a077-565110b5e12a.jsonl  210e09a4-3c12-4bbc-bfbf-4614c698e122.jsonl  21862b7e-822a-4008-8344-5263ee798cd2.jsonl  25a1365f-39c7-4e73-a0ea-68574b226e88.jsonl  2723fa98-fd9c-4ec9-8492-98a700f10d49.jsonl  2728ee4e-e4af-4fec-87fc-7cbc52bfb82f.jsonl  29acda82-7eb3-4955-bca0-6c6361aa01da.jsonl  2ac9b335-ecf3-4e43-a8c4-e750faf9e881.jsonl  2bd031c1-0623-4d51-8cc8-047bed2ca9ac.jsonl  2e2bea24-64ec-4308-a184-ff4c71732e7a.jsonl  2e8aac70-7083-46be-b97a-0325443201fe.jsonl  2f48438b-0766-4fb0-9c83-bf24d48e13cf.jsonl  31982565-d353-4cf3-8836-ff48f942cc53.jsonl  3358e67e-5381-4139-8b12-1ca1ce920315.jsonl  34576a34-f937-4ca1-a40e-d02b6bcf9995.jsonl  37418426-8b45-4586-b885-d173777541d7.jsonl  37e23752-1187-407e-954c-37050662eaa8.jsonl  3a340d91-65ef-498c-9e4b-c55ea3bed926.jsonl  (+88 more)
(+3062 files in other folders)
